<resources>
    <string name="app_name">Pizza App</string>
    <string name="logoText">Pizza Order</string>
    <string name="incorrect">Choose your pizza type:</string>
    <string name="pizzaSizeText">Choose pizza side:</string>
    <string name="choosePizzaSizeText">Choose pizza size:</string>
    <string name="pizzaImage">Pizza Images</string>
    <string name="mediumPizzaSize">Med ($9.99)</string>
    <string name="pizzaSizeLarge">Lrg ($13.99)</string>
    <string name="incorrect2">Lrg ($15.99)</string>
    <string name="pizza_sizeXL">Xlrg ($15.99)</string>
    <string name="pizzaSizeXL">XLrg ($15.99)</string>
    <string name="totalPriceText">"Total Price: "</string>
    <string name="priceTotalText">"Total Price: "</string>
    <string name="priceTotal">"Total Price: "</string>
    <string name="prac">dfdsfd</string>
    <string name="price_total">Price Total</string>
    <string name="price_total2">"Price Total: "</string>
    <string name="pizzaTypeText">Choose Your Pizza Type:</string>
    <string name="priceTotalNumber">$0.00</string>
    <string name="totalPriceNumber1" />
    <string name="totalPriceNumber2">$0.00</string>
    <string name="price_total1">Total Price:</string>
    <string name="totalNumber" />
    <string name="totalNumberPrice">0.00</string>
    <string name="toppingsText">Extra Toppings ($1.69 each)</string>
    <string name="extraPizzaToppingsText">Extra Toppings ($1.69 each):</string>
    <string name="subTotalText">"Subtotal: "</string>
    <string name="subTotalPrice">9.99</string>
    <string name="subTotal1">0.00</string>
    <string name="tipPrice">$0.0</string>
    <string name="sub_total">$0.0</string>
    <string name="subTotalPrice2">$0.00</string>
    <string name="tipPrice1">$0.00</string>
    <string name="fullPrice">$0.00</string>
    <string name="seekBarText">0%</string>
    <string name="subTotal">Sub Total:</string>
    <string name="subTotal_">Subtotal:</string>
    <string name="foodReviewText" />
</resources>